--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: 'Comfortaa', sans-serif;
+    background-color:lightgray;
+}
 .hide {
     display: none;
 }
@@ -12,4 +20,50 @@
 }
 #reset-container, h1 {
     text-align: center;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+}
+
+#reset-container {
+    background-color: white;
+    margin: 0 50px;
+    padding:20px;
+}
+
+.game-container {
+    display: flex;
+    flex-direction: row;
+    margin: 25px 50px;
+    justify-content: space-between;
+}
+
+.left {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    flex-basis: 100%;
+    align-self: flex-start;
+}
+
+.right {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    flex-basis: 100%;
+    align-self: flex-end;
+}
+
+button {
+    background-color: teal;
+    color: white;
+    padding: 10px;
+    font-size: 1em;
+    margin:20px 0;
 }
